--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
                 alt="The Windows 11 search icon in the search box"
                 width="15"
               />
-              <h3>Search</h3>
+              <input type="text" placeholder="Search" id="search-input">
             </div>
           </div>
           <div id="taskbar-icons">
