Converted "clickable" divs to buttons and made taskbar colour a gradient (like original). Also made search bar interactive.

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <div class="overall">
       <div class="wrapper">
         <div class="left">
-          <div class="weather clickable">
+          <button class="weather clickable">
             <img
               src="./assets/weather-sunny.png"
               alt="The Sunny icon in the Windows 11 taskbar weather"
@@ -20,67 +20,67 @@
               <h3>18&deg;C</h3>
               <h4>Sunny</h4>
             </div>
-          </div>
+          </button>
         </div>
         <div class="centre">
           <div id="windows-and-search">
-            <div class="clickable windows-logo">
+            <button class="windows-logo">
               <img
                 src="./assets/Windows_11_Start_Button.svg"
                 alt="The Windows 11 windows taskbar icon"
                 width="23"
               />
-            </div>
+            </button>
             <div id="search-box">
               <img
                 src="./assets/Search-Icon.png"
                 alt="The Windows 11 search icon in the search box"
                 width="15"
               />
-              <input type="text" placeholder="Search" id="search-input">
+              <input type="text" placeholder="Search" id="search-input" />
             </div>
           </div>
           <div id="taskbar-icons">
-            <div class="clickable taskbar-icon">
+            <button class="taskbar-icon">
               <img
                 src="./assets/Windows_11_Task_View_Icon.png"
                 alt="The Windows 11 Task View icon"
               />
-            </div>
-            <div class="clickable taskbar-icon">
+            </button>
+            <button class="taskbar-icon">
               <img
                 src="./assets/File_Explorer_Icon.png"
                 alt="The Windows 11 File Explorer icon"
               />
-            </div>
+            </button>
           </div>
         </div>
         <div class="right">
-          <div class="clickable">
+          <button>
             <img
               src="./assets/taskbar-tray-icon.png"
               alt="The tray icon to show more taskbar icons on Windows 11"
               width="10"
             />
-          </div>
-          <div class="clickable">
+          </button>
+          <button>
             <img
               src="./assets/windows-update-icon.png"
               alt="The Windows 11 update icon in the taskbar"
               width="17"
             />
-          </div>
-          <div class="clickable">
+          </buttin>
+          <button>
             <h3 id="taskbar-language">Eng</h3>
-          </div>
-          <div class="clickable">
+          </button>
+          <button>
             <img
               src="./assets/control-panel.png"
               alt="The taskbar control panel in Windows 11"
               width="65"
             />
-          </div>
-          <div class="clickable">
+          </button>
+          <button>
             <div id="time-and-notifications">
               <div class="time-text">
                 <h3>12:09</h3>
@@ -92,14 +92,14 @@
                 width="13"
               />
             </div>
-          </div>
-          <div class="clickable">
+          </buttin>
+          <button>
             <img
               src="./assets/copilot.png"
               alt="The Copilot icon in the Windows 11 taskbar"
               width="25"
             />
-          </div>
+          </button>
         </div>
       </div>
     </div>
