Added the bounce animation when clicking the taskbar icons

--- a/index.html
+++ b/index.html
@@ -24,11 +24,10 @@
         </div>
         <div class="centre">
           <div id="windows-and-search">
-            <button class="windows-logo">
+            <button class="windows-logo bouncy-click">
               <img
                 src="./assets/Windows_11_Start_Button.svg"
                 alt="The Windows 11 windows taskbar icon"
-                width="23"
               />
             </button>
             <div id="search-box">
@@ -41,13 +40,13 @@
             </div>
           </div>
           <div id="taskbar-icons">
-            <button class="taskbar-icon">
+            <button class="taskbar-icon bouncy-click">
               <img
                 src="./assets/Windows_11_Task_View_Icon.png"
                 alt="The Windows 11 Task View icon"
               />
             </button>
-            <button class="taskbar-icon">
+            <button class="taskbar-icon bouncy-click">
               <img
                 src="./assets/File_Explorer_Icon.png"
                 alt="The Windows 11 File Explorer icon"
