Made taskbar buttons code a bit more efficient

--- a/index.html
+++ b/index.html
@@ -7,8 +7,14 @@
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
-    <div class="overall">
-      <div class="wrapper">
+    <main class="overall">
+      <nav class="desktop-icon-wrapper">
+        <button>
+          <img src="./assets/desktop/this-pc.png" alt="The This PC icon on Windows 11">
+          <h4>This PC</h4>
+        </button>
+      </nav>
+      <footer class="taskbar-wrapper">
         <div class="left">
           <button class="weather clickable">
             <img
@@ -68,7 +74,7 @@
               alt="The Windows 11 update icon in the taskbar"
               width="17"
             />
-          </buttin>
+          </button>
           <button>
             <h3 id="taskbar-language">Eng</h3>
           </button>
@@ -91,7 +97,7 @@
                 width="13"
               />
             </div>
-          </buttin>
+          </button>
           <button>
             <img
               src="./assets/copilot.png"
@@ -100,7 +106,7 @@
             />
           </button>
         </div>
-      </div>
-    </div>
+      </footer>
+    </main>
   </body>
 </html>
