Added desktop icons

--- a/index.html
+++ b/index.html
@@ -13,6 +13,22 @@
           <img src="./assets/desktop/this-pc.png" alt="The This PC icon on Windows 11">
           <h4>This PC</h4>
         </button>
+        <button>
+          <img src="./assets/desktop/this-pc.png" alt="The This PC icon on Windows 11">
+          <h4>This PC</h4>
+        </button>
+        <button>
+          <img src="./assets/desktop/this-pc.png" alt="The This PC icon on Windows 11">
+          <h4>This PC</h4>
+        </button>
+        <button>
+          <img src="./assets/desktop/this-pc.png" alt="The This PC icon on Windows 11">
+          <h4>This PC</h4>
+        </button>
+        <button>
+          <img src="./assets/desktop/this-pc.png" alt="The This PC icon on Windows 11">
+          <h4>This PC</h4>
+        </button>
       </nav>
       <footer class="taskbar-wrapper">
         <div class="left">
