--- a/index.html
+++ b/index.html
@@ -7,30 +7,8 @@
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
-    <main class="overall">
-      <nav class="desktop-icon-wrapper">
-        <button>
-          <img src="./assets/desktop/this-pc.png" alt="The This PC icon on Windows 11">
-          <h4>This PC</h4>
-        </button>
-        <button>
-          <img src="./assets/desktop/this-pc.png" alt="The This PC icon on Windows 11">
-          <h4>This PC</h4>
-        </button>
-        <button>
-          <img src="./assets/desktop/this-pc.png" alt="The This PC icon on Windows 11">
-          <h4>This PC</h4>
-        </button>
-        <button>
-          <img src="./assets/desktop/this-pc.png" alt="The This PC icon on Windows 11">
-          <h4>This PC</h4>
-        </button>
-        <button>
-          <img src="./assets/desktop/this-pc.png" alt="The This PC icon on Windows 11">
-          <h4>This PC</h4>
-        </button>
-      </nav>
-      <footer class="taskbar-wrapper">
+    <main id="overall-div">
+      <footer>
         <div class="left">
           <button class="weather clickable">
             <img
