--- a/index.html
+++ b/index.html
@@ -23,11 +23,11 @@
           </button>
         </div>
         <div id="footer-centre">
-          <button id="windows-button">
+          <button id="windows-button" class="taskbar-button">
             <img
               src="./assets/Windows_11_Start_Button.svg"
               alt="The Windows 11 windows taskbar icon"
-              width="22"
+              width="23"
             />
           </button>
           <div id="search-box">
@@ -39,16 +39,18 @@
             <input type="text" placeholder="Search" id="search-input" />
           </div>
           <div id="taskbar-icons">
-            <button class="taskbar-button bouncy-click">
+            <button class="taskbar-button">
               <img
                 src="./assets/Windows_11_Task_View_Icon.png"
                 alt="The Windows 11 Task View icon"
+                width="31"
               />
             </button>
-            <button class="taskbar-button bouncy-click">
+            <button class="taskbar-button">
               <img
                 src="./assets/File_Explorer_Icon.png"
                 alt="The Windows 11 File Explorer icon"
+                width="32"
               />
             </button>
           </div>
@@ -79,8 +81,8 @@
             />
           </button>
           <button>
-            <div id="time-and-notifications">
-              <div class="time-text">
+            <div id="time-and-notifications-div">
+              <div id="time-and-notifications-text">
                 <h3>12:09</h3>
                 <h3>14/08/2024</h3>
               </div>
