Fixed font display and button background issues and designed the Search bar

--- a/index.html
+++ b/index.html
@@ -23,20 +23,27 @@
           </button>
         </div>
         <div id="footer-centre">
-          <button id="windows-button" class="taskbar-button">
-            <img
-              src="./assets/Windows_11_Start_Button.svg"
-              alt="The Windows 11 windows taskbar icon"
-              width="23"
-            />
-          </button>
+          <div>
+            <button id="windows-button" class="taskbar-button">
+              <img
+                src="./assets/Windows_11_Start_Button.svg"
+                alt="The Windows 11 windows taskbar icon"
+                width="24"
+              />
+            </button>
+          </div>
           <div id="search-box">
             <img
               src="./assets/Search-Icon.png"
               alt="The Windows 11 search icon in the search box"
               width="15"
             />
-            <input type="text" placeholder="Search" id="search-input" />
+            <input
+              type="text"
+              placeholder="Search"
+              id="search-input"
+              spellcheck="false"
+            />
           </div>
           <div id="taskbar-icons">
             <button class="taskbar-button">
@@ -56,7 +63,7 @@
           </div>
         </div>
         <div id="footer-right">
-          <button>
+          <button id="taskbar-tray-icon">
             <img
               src="./assets/taskbar-tray-icon.png"
               alt="The tray icon to show more taskbar icons on Windows 11"
