Made background a gradient with transparent 'blue waves' instead of just an image

--- a/index.html
+++ b/index.html
@@ -60,6 +60,13 @@
                 width="32"
               />
             </button>
+            <button class="taskbar-button">
+              <img
+                src="./assets/microsoft-edge-icon.png"
+                alt="The Microsoft Edge icon"
+                width="24"
+              />
+            </button>
           </div>
         </div>
         <div id="footer-right">
