Changed alt texts to be more concise, edited spacing between centre div elements and adjusted Search box 'Search' text's opacity

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
           <button id="weather-button">
             <img
               src="./assets/weather-sunny.png"
-              alt="The Sunny icon in the Windows 11 taskbar weather"
+              alt="Windows 11 weather Sunny icon"
               width="22"
             />
             <div id="weather-button-text">
@@ -27,7 +27,7 @@
             <button id="windows-button" class="taskbar-button">
               <img
                 src="./assets/Windows_11_Start_Button.svg"
-                alt="The Windows 11 windows taskbar icon"
+                alt="Windows 11 taskbar Start icon"
                 width="24"
               />
             </button>
@@ -35,7 +35,7 @@
           <div id="search-box">
             <img
               src="./assets/Search-Icon.png"
-              alt="The Windows 11 search icon in the search box"
+              alt="Windows 11 Search box icon"
               width="15"
             />
             <input
@@ -49,21 +49,21 @@
             <button class="taskbar-button">
               <img
                 src="./assets/Windows_11_Task_View_Icon.png"
-                alt="The Windows 11 Task View icon"
+                alt="Windows 11 Task View icon"
                 width="31"
               />
             </button>
             <button class="taskbar-button">
               <img
                 src="./assets/File_Explorer_Icon.png"
-                alt="The Windows 11 File Explorer icon"
+                alt="Windows 11 File Explorer icon"
                 width="32"
               />
             </button>
             <button class="taskbar-button">
               <img
                 src="./assets/microsoft-edge-icon.png"
-                alt="The Microsoft Edge icon"
+                alt="Microsoft Edge icon"
                 width="24"
               />
             </button>
@@ -73,14 +73,14 @@
           <button id="taskbar-tray-icon">
             <img
               src="./assets/taskbar-tray-icon.png"
-              alt="The tray icon to show more taskbar icons on Windows 11"
+              alt="Windows 11 hidden icon menu"
               width="10"
             />
           </button>
           <button>
             <img
               src="./assets/windows-update-icon.png"
-              alt="The Windows 11 update icon in the taskbar"
+              alt="Windows 11 Update icon"
               width="17"
             />
           </button>
@@ -90,7 +90,7 @@
           <button>
             <img
               src="./assets/control-panel.png"
-              alt="The taskbar control panel in Windows 11"
+              alt="Windows 11 wifi, sound and battery panel"
               width="65"
             />
           </button>
@@ -102,7 +102,7 @@
               </div>
               <img
                 src="./assets/notification-bell.png"
-                alt="The notification bell icon in the Windows 11 taskbar"
+                alt="Notification bell"
                 width="13"
               />
             </div>
@@ -110,7 +110,7 @@
           <button>
             <img
               src="./assets/copilot.png"
-              alt="The Copilot icon in the Windows 11 taskbar"
+              alt="Copilot icon"
               width="25"
             />
           </button>
