Added a portrait indicator to tell the user to switch to landscape mode

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
-    <main id="overall-div">
+    <div id="main-div">
       <footer>
         <div id="footer-left">
           <button id="weather-button">
@@ -116,6 +116,11 @@
           </button>
         </div>
       </footer>
-    </main>
+    </div>
+    <div id="portrait-mode">
+      <h1>Turn your device to landscape mode for this to work!</h1>
+      <!-- <h2>yadda</h2>
+      <h3>even more yadda</h3> -->
+    </div>
   </body>
 </html>
