Added favicon and adjusted font family and colours to fit more devices

--- a/index.html
+++ b/index.html
@@ -3,8 +3,18 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Windows 11 Taskbar - Flexbox</title>
+    <title>Windows 11 Desktop</title>
     <link rel="stylesheet" href="style.css" />
+    <link
+      rel="shortcut icon"
+      href="/assets/Windows_11_Start_Button_Alternate.svg"
+    />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300..800;1,300..800&display=swap"
+      rel="stylesheet"
+    />
   </head>
   <body>
     <div id="main-div">
@@ -108,11 +118,7 @@
             </div>
           </button>
           <button>
-            <img
-              src="./assets/copilot.png"
-              alt="Copilot icon"
-              width="25"
-            />
+            <img src="./assets/copilot.png" alt="Copilot icon" width="25" />
           </button>
         </div>
       </footer>
