Edited favion code a bit

--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
     <title>Windows 11 Desktop</title>
     <link rel="stylesheet" href="style.css" />
     <link
-      rel="shortcut icon"
-      href="/assets/Windows_11_Start_Button_Alternate.svg"
+      rel="icon"
+      href="/assets/Windows_11_Start_Button_Alternate.svg?"
     />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
