Changed favicon from svg to png, to solve favicon not loading on Github Pages

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="style.css" />
     <link
       rel="icon"
-      href="/assets/Windows_11_Start_Button_Alternate.svg?"
+      href="/assets/favicon/favicon.png"
     />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
