--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <link
       rel="icon"
       href="/assets/favicon/favicon.png"
+      type="image/x-icon"
     />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
