Added question mark

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="style.css" />
     <link
       rel="icon"
-      href="/assets/favicon/favicon.png"
+      href="/assets/favicon/favicon.png?"
       type="image/x-icon"
     />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
