Added some sort of fix for intersecting icons

--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
               width="10"
             />
           </button>
-          <button>
+          <button id="windows-update-icon">
             <img
               src="./assets/windows-update-icon.png"
               alt="Windows 11 Update icon"
