If device width is < 736px, the left and right sides of the taskbar will have no margin

--- a/index.html
+++ b/index.html
@@ -5,11 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Windows 11 Desktop</title>
     <link rel="stylesheet" href="style.css" />
-    <link
-      rel="icon"
-      href="/assets/favicon/favicon.png?"
-      type="image/x-icon"
-    />
+    <link rel="icon" href="/assets/favicon/favicon.png?" type="image/x-icon" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
