Made portrait mode message clearer

--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@
       </footer>
     </div>
     <div id="portrait-mode">
-      <h1>Turn your device to landscape mode for this to work!</h1>
+      <h1>Rotate your device to landscape mode for this to work!</h1>
     </div>
   </body>
 </html>
