Made Search box slightly more accurate to og (rotated search icon a bit, made bg and border colour a little more washed out)

--- a/index.html
+++ b/index.html
@@ -43,6 +43,7 @@
             <img
               src="./assets/Search-Icon.png"
               alt="Windows 11 Search box icon"
+              id="search-box-icon"
               width="15"
             />
             <input
