Adjusted alt texts for images

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
           <button id="weather-button">
             <img
               src="./assets/weather-sunny.png"
-              alt="Windows 11 weather Sunny icon"
+              alt="Sunny weather icon"
               width="22"
             />
             <div id="weather-button-text">
@@ -34,7 +34,7 @@
             <button id="windows-button" class="taskbar-button">
               <img
                 src="./assets/Windows_11_Start_Button.svg"
-                alt="Windows 11 taskbar Start icon"
+                alt="Windows 11 Start icon"
                 width="24"
               />
             </button>
@@ -42,7 +42,7 @@
           <div id="search-box">
             <img
               src="./assets/Search-Icon.png"
-              alt="Windows 11 Search box icon"
+              alt="Search box icon"
               id="search-box-icon"
               width="15"
             />
@@ -57,14 +57,14 @@
             <button class="taskbar-button">
               <img
                 src="./assets/Windows_11_Task_View_Icon.png"
-                alt="Windows 11 Task View icon"
+                alt="Task View icon"
                 width="31"
               />
             </button>
             <button class="taskbar-button">
               <img
                 src="./assets/File_Explorer_Icon.png"
-                alt="Windows 11 File Explorer icon"
+                alt="File Explorer icon"
                 width="32"
               />
             </button>
@@ -81,14 +81,14 @@
           <button id="taskbar-tray-icon">
             <img
               src="./assets/taskbar-tray-icon.png"
-              alt="Windows 11 hidden icon menu"
+              alt="Hidden icon menu"
               width="10"
             />
           </button>
           <button id="windows-update-icon">
             <img
               src="./assets/windows-update-icon.png"
-              alt="Windows 11 Update icon"
+              alt="Windows Update icon"
               width="17"
             />
           </button>
@@ -98,7 +98,7 @@
           <button>
             <img
               src="./assets/control-panel.png"
-              alt="Windows 11 wifi, sound and battery panel"
+              alt="Wifi, sound and battery panel"
               width="65"
             />
           </button>
