Made website more user-friendly (made widths of images and text adjust in size according to viewport size (still W.I.P.))

--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
           <button>
             <h3 id="taskbar-language">Eng</h3>
           </button>
-          <button>
+          <button id="taskbar-control-panel">
             <img
               src="./assets/control-panel.png"
               alt="Wifi, sound and battery panel"
@@ -111,7 +111,7 @@
               />
             </div>
           </button>
-          <button>
+          <button id="taskbar-copilot-icon">
             <img src="./assets/copilot.png" alt="Copilot icon" width="25" />
           </button>
         </div>
