Made code even more mobile-friendly

--- a/index.html
+++ b/index.html
@@ -88,8 +88,8 @@
               width="17"
             />
           </button>
-          <button>
-            <h3 id="taskbar-language">Eng</h3>
+          <button id="taskbar-language">
+            <h3>Eng</h3>
           </button>
           <button id="taskbar-control-panel">
             <img
