--- a/index.html
+++ b/index.html
@@ -3,9 +3,11 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+
     <title>Windows 11 Desktop</title>
     <link rel="stylesheet" href="style.css" />
     <link rel="icon" href="/assets/favicon/favicon.png?" type="image/x-icon" />
+
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
@@ -15,6 +17,11 @@
   </head>
   <body>
     <div id="main-div">
+      <main>
+        <button class="desktop-button" draggable="true">
+          <img src="/assets/desktop/this-pc.png" alt="Desktop icon">
+        </button>
+      </main>
       <footer>
         <div id="footer-left">
           <button id="weather-button">
