Fixed Desktop grid a bit

--- a/index.html
+++ b/index.html
@@ -21,6 +21,12 @@
         <button class="desktop-button" draggable="true">
           <img src="/assets/desktop/this-pc.png" alt="Desktop icon">
         </button>
+        <button class="desktop-button" draggable="true">
+          <img src="/assets/desktop/this-pc.png" alt="Desktop icon">
+        </button>
+        <button class="desktop-button" draggable="true">
+          <img src="/assets/desktop/this-pc.png" alt="Desktop icon">
+        </button>
       </main>
       <footer>
         <div id="footer-left">
