Renamed 'footer' to 'taskbar'

--- a/index.html
+++ b/index.html
@@ -28,8 +28,8 @@
           <img src="/assets/desktop/this-pc.png" alt="Desktop icon">
         </button>
       </main>
-      <footer>
-        <div id="footer-left">
+      <div id="taskbar">
+        <div id="taskbar-left">
           <button id="weather-button">
             <img
               src="./assets/weather-sunny.png"
@@ -42,7 +42,7 @@
             </div>
           </button>
         </div>
-        <div id="footer-centre">
+        <div id="taskbar-centre">
           <div>
             <button id="windows-button" class="taskbar-button">
               <img
@@ -86,7 +86,7 @@
             </button>
           </div>
         </div>
-        <div id="footer-right">
+        <div id="taskbar-right">
           <button id="taskbar-tray-icon">
             <img
               src="./assets/taskbar-tray-icon.png"
@@ -128,7 +128,7 @@
             <img src="./assets/copilot.png" alt="Copilot icon" width="25" />
           </button>
         </div>
-      </footer>
+      </div>
     </div>
     <div id="portrait-mode">
       <h1>Rotate your device to landscape mode for this to work!</h1>
