Got rid of desktop icons and polished up code a little (still W.I.P.)

--- a/index.html
+++ b/index.html
@@ -16,18 +16,8 @@
     />
   </head>
   <body>
-    <div id="main-div">
-      <main>
-        <button class="desktop-button" draggable="true">
-          <img src="/assets/desktop/this-pc.png" alt="Desktop icon">
-        </button>
-        <button class="desktop-button" draggable="true">
-          <img src="/assets/desktop/this-pc.png" alt="Desktop icon">
-        </button>
-        <button class="desktop-button" draggable="true">
-          <img src="/assets/desktop/this-pc.png" alt="Desktop icon">
-        </button>
-      </main>
+    <main>
+      <!-- Taskbar section-->
       <div id="taskbar">
         <div id="taskbar-left">
           <button id="weather-button">
@@ -129,7 +119,7 @@
           </button>
         </div>
       </div>
-    </div>
+    </main>
     <div id="portrait-mode">
       <h1>Rotate your device to landscape mode for this to work!</h1>
     </div>
